--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -8,8 +8,6 @@
   <meta name="viewport"
         content="width=device-width, initial-scale=1.0">
   <title>Sunshine Forecastn Idaho</title>
-  <meta name="author"
-        content="Barbara Chamberlin">
   <meta name="description"
         content="This is the Sunshine Forecast - Preston Idaho page.">
   <link rel="shortcut icon"
@@ -69,7 +67,7 @@
 
     <div class="hero-container">
       <picture class="hero-ph">
-        <img src="images/hero-img.jpg"
+        <img src="images/rainbow- valley-998.webp"
              alt="hero image">
       </picture>
 
@@ -77,11 +75,22 @@
         <h3>Weather Summary
           <hr />
         </h3>
-        <p>Currently: <span id="current">Partly Cloudy</span></p>
-        <p>High: <span id="high">68</span> &deg;</p>
-        <p>Wind Chill: <span id="wind-chill">68</span> &deg;</p>
-        <p>Humidity: <span id="humid">43</span> %</p>
-        <p>Wind Speed: <span id="wind-speed">6</span> mph</p>
+        <div class="ws-grid">
+          <span class="ws-title">Currently: </span>
+          <span id="current">Partly Cloudy</span>
+          <span class="ws-title">High: </span>
+          <span id="high">68</span> 
+          <!-- <span> &deg;</span> -->
+          <span class="ws-title">Wind Chill: </span>
+          <span id="wind-chill">68</span>
+          <!-- <span> &deg;</span> -->
+          <span class="ws-title">Humidity: </span>
+          <span id="humid">43</span>
+          <!-- <span> %</span> -->
+          <span class="ws-title">Wind Speed: </span>
+          <span id="wind-speed">6</span>
+          <!-- <span> mph</span> -->
+        </div>
       </section>
     </div>
 
