start of week 7

--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -67,7 +67,7 @@
 
     <div class="hero-container">
       <picture class="hero-ph">
-        <img src="images/rainbow- valley-998.webp"
+        <img src="images/hero-800.jpg"
              alt="hero image">
       </picture>
 
@@ -77,20 +77,15 @@
         </h3>
         <div class="ws-grid">
           <span class="ws-title">Currently: </span>
-          <span id="current">Partly Cloudy</span>
+          <span id="current"> Partly Cloudy</span>
           <span class="ws-title">High: </span>
-          <span id="high">68</span> 
-          <!-- <span> &deg;</span> -->
+          <div><span id="high"> 68</span>&deg;</div>
           <span class="ws-title">Wind Chill: </span>
-          <span id="wind-chill">68</span>
-          <!-- <span> &deg;</span> -->
+          <div><span id="wind-chill"> 68</span>&deg;</div>
           <span class="ws-title">Humidity: </span>
-          <span id="humid">43</span>
-          <!-- <span> %</span> -->
+          <div><span id="humid"> 43</span> %</div>
           <span class="ws-title">Wind Speed: </span>
-          <span id="wind-speed">6</span>
-          <!-- <span> mph</span> -->
-        </div>
+          <div><span id="wind-speed"> 6</span> mph</div>
       </section>
     </div>
 
@@ -191,6 +186,17 @@
     </div>
 
   </footer>
+  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+  <script src="js/webfontload.js">
+    // WebFont.load({
+    //   google: {
+    //     families: ['Montserrat'
+    //       'Yaldevi'
+    //     ]
+    //   }
+    // });
+    // ---ether way works---
+  </script>
 </body>
 
 </html>
