--- a/index.html
+++ b/index.html
@@ -55,7 +55,11 @@
                                  href="lesson5/dom-manipulation/bom.html"><b>DOM Manipulation</b></a><span> | </span><a
                                  class="link"
                                  href="lesson5/preston-5.html"><b>Preston Town Page Continued</b></a></li>
-                        <li>Lesson 06: <a class="link"
+                        <li>Lesson 06: <a class="Responsive Images and Font"
+                                 href="lesson6/preston-6.html"><b>Link</b></a></li>
+                        <li>Lesson 07: <a class="link"
+                                 href="#"><b>Link</b></a></li>
+                        <li>Lesson 08: <a class="link"
                                  href="#"><b>Link</b></a></li>
                   </ul>
             </main>
