--- a/lesson6/preston-6.html
+++ b/lesson6/preston-6.html
@@ -36,7 +36,7 @@
 
 </head>
 
-<body >
+<body>
   <div class="pancakes">
     <p>
       🥞 Saturday, come join us for “Pancakes in the Park”
@@ -79,14 +79,11 @@
         <source media="(min-width: 960px)"
                 srcset="images/wk6-960.jpg">
         <img src="images/wk6-960.jpg"
-             alt="hero images"
-             sizes="100vw">
+             alt="hero images">
       </picture>
 
       <section class="weathersummary">
-        <h3>Weather Summary
-          <hr />
-        </h3>
+        <h3>Weather Summary</h3>
         <div class="ws-grid">
           <span class="ws-title">Currently: </span>
           <span id="current"> Partly Cloudy</span>
@@ -98,6 +95,7 @@
           <div><span id="humid"> 43</span> %</div>
           <span class="ws-title">Wind Speed: </span>
           <div><span id="wind-speed"> 6</span> mph</div>
+        </div>
       </section>
     </div>
 
