--- a/index.html
+++ b/index.html
@@ -58,7 +58,10 @@
                         <li>Lesson 06: <a class="link"
                                  href="lesson6/preston-6.html"><b>Responsive Images and Font</b></a></li>
                         <li>Lesson 07: <a class="link"
-                                 href="#"><b>Link</b></a></li>
+                                 href="lesson7/lazyload.html"><b>Progressive Loading of Images</b></a><span> | </span><a
+                                 class="link"
+                                 href="lesson7/gallery-7.html"><b>The Gallery Page</b></a></li>
+
                         <li>Lesson 08: <a class="link"
                                  href="#"><b>Link</b></a></li>
                   </ul>
