real starting point for wk 7

--- a/lesson7/gallery-7.html
+++ b/lesson7/gallery-7.html
@@ -13,7 +13,7 @@
 
   <link rel="stylesheet"
         href="css/lazy.css">
-  <script src="js/lazy-loading.js"></script>
+  <script defer src="js/lazy-loading.js"></script>
   <link rel="preconnect"
         href="https://fonts.googleapis.com">
   <link rel="preconnect"
