--- a/lesson6/preston-6.html
+++ b/lesson6/preston-6.html
@@ -37,8 +37,8 @@
 </head>
 
 <body>
-  <div class="pancakes">
-    <p>
+  <div>
+    <p class="pancakes">
       🥞 Saturday, come join us for “Pancakes in the Park”
       at 9:00 am at Preston Community Park. 😋
     </p>
@@ -68,6 +68,7 @@
   </nav>
 
   <main>
+
     <h2>Preston Idaho</h2>
 
     <div class="hero-container">
@@ -199,9 +200,7 @@
   <script>
     WebFont.load({
       google: {
-        families: ['Montserrat'
-          'Yaldevi'
-        ]
+        families: ['Montserrat', 'Yaldevi']
       }
     });
   </script>
