fix wk 7 part 1

--- a/lesson7/gallery-7.html
+++ b/lesson7/gallery-7.html
@@ -22,8 +22,7 @@
         href="css/large.css">
   <script defer
           src="js/script.js"></script>
-  <script defer
-          src="js/banner.js"></script>
+ 
 
 </head>
 
@@ -54,7 +53,7 @@
 
   <main>
     <h2>Weather Gallery</h2>
-    <div>
+    <div class="grid">
       <picture><img src="images/w-pic9.jpg"
              alt="A purple path of flowers.">
         <figcaption>"Purple Garden Path" by Bob Gate</figcaption>
