lazy loading wk 7 fix

--- a/lesson7/gallery-7.html
+++ b/lesson7/gallery-7.html
@@ -53,40 +53,49 @@
 
   <main>
     <h2>Weather Gallery</h2>
-    <div class="grid">
-      <figure><img src="images/w-pic9.jpg"
+    <div class="grid pictures">
+      <figure><img src="images/placeholder.jpg"
+             data-src="images/w-pic9.jpg"
              alt="A purple path of flowers.">
         <figcaption>"Purple Garden Path" by Bob Gate</figcaption>
       </figure>
-      <figure><img src="images/w-pic8.jpg"
+      <figure><img src="images/placeholder.jpg"
+             data-src="images/w-pic8.jpg"
              alt="Old cabin in the mountains during springtime.">
         <figcaption>"Back In Time" by Sean Wells</figcaption>
       </figure>
-      <figure><img src="images/w-pic3.jpg"
+      <figure><img src="images/placeholder.jpg"
+             data-src="images/w-pic3.jpg"
              alt="Green grass and blue sky.">
         <figcaption>"Spring Time Dreaming" by Leslie Hope</figcaption>
       </figure>
-      <figure><img src="images/w-pic4.jpg"
+      <figure><img src="images/placeholder.jpg"
+             data-src="images/w-pic4.jpg"
              alt="Lighting strike.">
         <figcaption>"Electric Spray" by Mary Brown </figcaption>
       </figure>
-      <figure><img src="images/w-pic6.jpg"
+      <figure><img src="images/placeholder.jpg"
+             data-src="images/w-pic6.jpg"
              alt="A person standing at the end of the dock on a wet day.">
         <figcaption>"A Chance of Rain" by Scott Erickson</figcaption>
       </figure>
-      <figure><img src="images/w-pic2.jpg"
+      <figure><img src="images/placeholder.jpg"
+             data-src="images/w-pic2.jpg"
              alt="A woodland road in the fall.">
         <figcaption>"Off The Beaten Path" by Patty Hughes</figcaption>
       </figure>
-      <figure><img src="images/w-pic5.jpg"
+      <figure><img src="images/placeholder.jpg"
+             data-src="images/w-pic5.jpg"
              alt="Trees in the fall.">
         <figcaption>"Falling For Fall" by Tammy Camp</figcaption>
       </figure>
-      <figure><img src="images/w-pic1.jpg"
+      <figure><img src="images/placeholder.jpg"
+             data-src="images/w-pic1.jpg"
              alt="A snowy road lined with trees.">
         <figcaption>"Ice Road" by Neville Longbottom</figcaption>
       </figure>
-      <figure><img src="images/w-pic7.jpg"
+      <figure><img src="images/placeholder.jpg"
+             data-src="images/w-pic7.jpg"
              alt="A cabin on the lake.">
         <figcaption>"Winter Get A Way" by Alice Choate</figcaption>
       </figure>
