--- a/lesson7/lazyload.html
+++ b/lesson7/lazyload.html
@@ -31,27 +31,27 @@
       <div class="pictures">
             <picture><img src="images/placeholder.jpg"
                        data-src="images/pic1.jpg"
-                       alt="stock photo"
+                       alt="river stream"
                        class="lazy"></picture>
             <picture><img src="images/placeholder.jpg"
                        data-src="images/pic2.jpg"
-                       alt="stock photo"
+                       alt="dock at sunrise"
                        class="lazy"></picture>
             <picture><img src="images/placeholder.jpg"
                        data-src="images/pic3.jpg"
-                       alt="stock photo"
+                       alt="desert rain clouds"
                        class="lazy"></picture>
             <picture><img src="images/placeholder.jpg"
                        data-src="images/pic4.jpg"
-                       alt="stock photo"
+                       alt="lake and clouds"
                        class="lazy"></picture>
             <picture><img src="images/placeholder.jpg"
                        data-src="images/pic5.jpg"
-                       alt="stock photo"
+                       alt="mountain river stream"
                        class="lazy"></picture>
             <picture><img src="images/placeholder.jpg"
                        data-src="images/pic6.jpg"
-                       alt="stock photo"
+                       alt="rocky ocean shoreline "
                        class="lazy"></picture>
       </div>
 
