--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                                  class="link"
                                  href="lesson7/gallery-7.html"><b>The Gallery Page</b></a></li>
                         <li>Week 8 Presentation: <a class="link hide"
-                                 href="form-input-validation/"><b>Form Input Validation</b></a></li>
+                                 href="form-input-validation/form-input-val.html"><b>Form Input Validation</b></a></li>
                         <li>Lesson 08: <a class="link"
                                  href="#"><b>Link</b></a></li>
                         <li>Lesson 09: <a class="link"
