--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                                  href="lesson7/lazyload.html"><b>Progressive Loading of Images</b></a><span> | </span><a
                                  class="link"
                                  href="lesson7/gallery-7.html"><b>The Gallery Page</b></a></li>
-                        <li>Week 8 Presentation: <a class="link hide"
+                        <li>Week 8 Presentation: <a class="link"
                                  href="form-input-validation/form-input-val.html"><b>Form Input Validation</b></a></li>
                         <li>Lesson 08: <a class="link"
                                  href="#"><b>Link</b></a></li>
