--- a/form-input-validation/index.html
+++ b/form-input-validation/index.html
@@ -67,7 +67,8 @@
                  name="Phone"
                  id="phone"
                  placeholder="(XXX) XXX-XXXX"
-                 pattern="\([0-9]{3}\)[\s]{1}[0-9]{3}-[0-9]{4}"
+                 <!-- pattern="\([0-9]{3}\)[\s]{1}[0-9]{3}-[0-9]{4}" -->
+                 <!-- When viewed on a phone a key pad is given without parentheses or space option. -->
                  required>
           <span></span>
         </label>
