--- a/form-input-validation/results.html
+++ b/form-input-validation/results.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div id="results"></div>
-  <a href="form-input-val.html">Back to Form</a>
+  <a href="index.html">Back to Form</a>
   <meta name="description"
         content="In lieu of ">
   
