--- a/form-input-validation/index.html
+++ b/form-input-validation/index.html
@@ -63,12 +63,12 @@
       </div>
       <br>
       <div>
+            <!-- When viewed on a phone a key pad is given without parentheses or space option. -->
         <label for="phone">* Phone: <input type="tel"
                  name="Phone"
                  id="phone"
                  placeholder="(XXX) XXX-XXXX"
-                 <!-- pattern="\([0-9]{3}\)[\s]{1}[0-9]{3}-[0-9]{4}" -->
-                 <!-- When viewed on a phone a key pad is given without parentheses or space option. -->
+                 pattern="\([0-9]{3}\)[\s]{1}[0-9]{3}-[0-9]{4}"
                  required>
           <span></span>
         </label>
