--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -23,12 +23,12 @@
   <script defer
           src="js/script.js"></script>
 
- 
+
 
 </head>
 
 <body>
-  
+
   <header>
 
     <img src="images/sun-weather-icon.png"
@@ -55,8 +55,81 @@
   <main>
 
 
-    
-    
+    <div>
+      <label for="fullName">Full Name: <input type="text"
+               name="Full Name"
+               id="fullname"
+               pattern="[a-zA-Z]{5, }"
+               required>
+      </label>
+      <br>
+
+      <label for="email">Email: <input type="email"
+               name="Email"
+               id="email"
+               placeholder="user@mydomain.com">
+      </label>
+      <br>
+
+      <label for="phone">Phone: <input type="tel"
+               name="Phone"
+               id="phone"
+               required>
+      </label>
+      <br>
+
+      <label for="zipCode">Zip Code: <input type="number"
+               name="Zip Code"
+               id="zipcode"
+               required>
+      </label>
+      <br>
+      <label for="stormDate">Storm Date: <input type="date"
+               name="Storm Date"
+               id="stormDate"
+               required>
+      </label>
+      <br>
+      <label for="stormType">Storm Type: <input type="list"
+               name="Storm Type"
+               id="stormtype">
+        <datalist id="stormList">
+          <option value="Flash Flood"></option>
+          <option value="Hail"></option>
+          <option value="Hurricane"></option>
+          <option value="Thunderstorm"></option>
+          <option value="Tornado"></option>
+          <option value="Other"></option>
+        </datalist>
+      </label>
+      <br>
+      <label for="stormSeverity">Storm Severity: <input type="range"
+               name="Storm Severity"
+               id="stormSeverity"
+               value="1"
+               min="1"
+               max="10"
+               step="1">
+      </label>
+      <br>
+      <label for="stormRegion">Storm Region: <input type="text"
+               name="Storm Region"
+               id="stormRegion">
+        <datalist id="stormList">
+          <option value="Preston"></option>
+          <option value="Soda Springs"></option>
+          <option value="Fish Haven"></option>
+        </datalist>
+      </label>
+      <br>
+
+
+
+
+
+    </div>
+
+
   </main>
 
   <footer>
