--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
                         <li>Week 8 Presentation: <a class="link"
                                  href="form-input-validation/index.html"><b>Form Input Validation</b></a></li>
                         <li>Lesson 08: <a class="link"
-                                 href="#"><b>Link</b></a></li>
+                                 href="lesson8/tablebuild.html"><b>Table Build</b></a><span> | </span><a class="link"
+                                 href="lesson8/stormcenter.html"><b>Storm Center</b></a></li>
                         <li>Lesson 09: <a class="link"
                                  href="#"><b>Link</b></a></li>
 
