scope added table wk 8

--- a/lesson8/tablebuild.html
+++ b/lesson8/tablebuild.html
@@ -28,38 +28,47 @@
     </thead>
     <tbody>
       <tr>
-        <th id="period">Period</th>
-        <th id="sales">Sales</th>
-        <th id="salesGoal">Sales Goal</th>
+        <th scope="col"
+            id="period">Period</th>
+        <th scope="col"
+            id="sales">Sales</th>
+        <th scope="col"
+            id="salesGoal">Sales Goal</th>
       </tr>
       <tr>
-        <th id="august">August</th>
-        <td>$3,590</td>
-        <td>$4,000</td>
+        <th scope="row"
+            id="august">August</th>
+        <td headers="august sales">$3,590</td>
+        <td headers="august sales_goal">$4,000</td>
       </tr>
       <tr>
-        <th id="september">September</th>
-        <td>$4,420</td>
-        <td>$5,000</td>
+        <th scope="row"
+            id="september">September</th>
+        <td headers="september sales">$4,420</td>
+        <td headers="september sales_goal">$5,000</td>
       </tr>
       <tr>
-        <th id="october">October</th>
-        <td>$4,870</td>
-        <td>$5,000</td>
+        <th scope="row"
+            id="october">October</th>
+        <td headers="october sales">$4,870</td>
+        <td headers="october sales_goal">$5,000</td>
       </tr>
       <tr>
-        <th id="november">November</th>
-        <td>$8,610</td>
-        <td>$7,500</td>
+        <th scope="row"
+            id="november">November</th>
+        <td headers="november sales">$8,610</td>
+        <td headers="november sales_goal">$7,500</td>
       </tr>
       <tr>
-        <th id="blackFriday">Black Friday</th>
-        <td colspan="2">$3,200</td>
+        <th scope="row"
+            id="blackFriday">Black Friday</th>
+        <td header="black_friday sales sales_goal" colspan="2">$3,200</td>
       </tr>
       <tr>
-        <th id="december">December</th>
-        <td>$6,820</td>
-        <td>$7,500</td>
+        <th scope="row"
+            id="december">December</th>
+        <td headers="december sales">$6,820</td>
+        <td headers="december sales_goal">$7,500</td>
       </tr>
     </tbody>
     <tfoot>
