--- a/lesson8/tablebuild.html
+++ b/lesson8/tablebuild.html
@@ -73,7 +73,7 @@
     </tbody>
     <tfoot>
       <tr>
-        <td colspan="3">Comileed 12.20.2020 by bRauls</td>
+        <td colspan="3">Compiled 12.20.2020 by bRauls</td>
       </tr>
     </tfoot>
 
