--- a/index.html
+++ b/index.html
@@ -67,7 +67,14 @@
                                  href="lesson8/tablebuild.html"><b>Table Build</b></a><span> | </span><a class="link"
                                  href="lesson8/stormcenter.html"><b>Storm Center</b></a></li>
                         <li>Lesson 09: <a class="link"
-                                 href="#"><b>Link</b></a></li>
+                                 href="#"><b>Link</b></a><span> | </span><a class="link"
+                                    href="#"><b>Link</b></a></li>
+                        <li>Lesson 10: <a class="link"
+                                 href="#"><b>Link</b></a><span> | </span><a class="link"
+                                    href="#"><b>Link</b></a></li>
+                        <li>Lesson 11: <a class="link"
+                                 href="#"><b>Link</b></a><span> | </span><a class="link"
+                                    href="#"><b>Link</b></a></li>
 
                   </ul>
             </main>
