--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -103,13 +103,32 @@
         </datalist>
       </label>
       <br>
-      <label for="stormSeverity">Storm Severity: <input type="range"
-               name="Storm Severity"
+      <label class="slide"
+             for="stormSeverity">Storm Severity: <input type="range"
                id="stormSeverity"
-               value="1"
+               list="tickmarks"
+               name="Storm Severity"
+               value="5"
                min="1"
                max="10"
-               step="1">
+               step="1"
+               id="stormSeverity"
+               oninput="adjustSlide(this.value)"
+               onchange="adjustSlide(this.value)">
+        <span id="ratingvalue">5</span>
+        <datalist id="tickmarks">
+          <option value="0">
+          <option value="1">
+          <option value="2">
+          <option value="3">
+          <option value="4">
+          <option value="5">
+          <option value="6">
+          <option value="7">
+          <option value="8">
+          <option value="9">
+          <option value="10">
+        </datalist>
       </label>
       <br>
       <label for="stormRegion">Storm Region: <input type="text"
@@ -169,6 +188,18 @@
         families: ['Montserrat', 'Yaldevi']
       }
     });
+
+    function adjustSlide(stormSeverity) {
+      document.getElementById("ratingvalue").innerHTML = stormSeverity;
+    }
+
+    function selectResponse() {
+      const s = document.querySelector('#selected')
+      const sel = document.querySelector('#selectbrowser');
+      s.style.display = "block";
+      s.textContent = sel.value;
+
+    }
   </script>
 </body>
 
