week 9 start page

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
                                  href="lesson8/tablebuild.html"><b>Table Build</b></a><span> | </span><a class="link"
                                  href="lesson8/stormcenter.html"><b>Storm Center</b></a></li>
                         <li>Lesson 09: <a class="link"
-                                 href="#"><b>Link</b></a><span> | </span><a class="link"
-                                    href="#"><b>Link</b></a></li>
+                                 href="lesson9/prophets.html"><b>Prophets Cards</b></a><span> | </span><a class="link"
+                                    href="lesson9/index.html"><b>The Weather Site Home Page</b></a></li>
                         <li>Lesson 10: <a class="link"
                                  href="#"><b>Link</b></a><span> | </span><a class="link"
                                     href="#"><b>Link</b></a></li>
