end work silver comp  wk 9

--- a/lesson9/prophets.html
+++ b/lesson9/prophets.html
@@ -24,13 +24,13 @@
 </head>
 
 <body>
-  <header>
+  <header class="center">
     <h1>Latter-day Prophets</h1>
   </header>
   <main>
     <div class="cards"></div>
   </main>
-  <footer>
+  <footer class="center">
     Barbara Chamberlin | BYU-Idaho | WDD 230
   </footer>
 
