storm report thank you fin

--- a/lesson8/thanks.html
+++ b/lesson8/thanks.html
@@ -64,6 +64,8 @@
               title="NOAA's Weather-Ready Nation: Be a Force of Nature!"
               frameborder="0"
               allowfullscreen></iframe>
+      <figcaption>NOAA's Weather-Ready Nation: Be a Force of Nature!</figcaption>
+
     </div>
 
 
