so done storm thank you page

--- a/lesson8/thanks.html
+++ b/lesson8/thanks.html
@@ -57,17 +57,18 @@
 
 
     <h2 class="thanks">Thank you for helping our community stay weather aware. 🌩️ </h2>
-    <div class="video">
-      <iframe width="560"
-              height="315"
-              src="https://www.youtube.com/embed/7DgFPgJTxP8"
-              title="NOAA's Weather-Ready Nation: Be a Force of Nature!"
-              frameborder="0"
-              allowfullscreen></iframe>
-      <figcaption>NOAA's Weather-Ready Nation: Be a Force of Nature!</figcaption>
+    
+      <figure>
+        <iframe width="560"
+                height="315"
+                src="https://www.youtube.com/embed/7DgFPgJTxP8"
+                title="NOAA's Weather-Ready Nation: Be a Force of Nature!"
+                class="video"
+                allowfullscreen></iframe>
+        <figcaption>NOAA's Weather-Ready Nation: Be a Force of Nature!</figcaption>
+      </figure>
 
-    </div>
-
+    
 
   </main>
 
