up dated starting index

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                                  href="lesson9/prophets.html"><b>Prophets Cards</b></a><span> | </span><a class="link"
                                     href="lesson9/index.html"><b>The Weather Site Home Page</b></a></li>
                         <li>Lesson 10: <a class="link"
-                                 href="#"><b>Link</b></a><span> | </span><a class="link"
+                                 href="lesson10/api-test.html"><b>Weather API</b></a><span> | </span><a class="link"
                                     href="#"><b>Link</b></a></li>
                         <li>Lesson 11: <a class="link"
                                  href="#"><b>Link</b></a><span> | </span><a class="link"
