--- a/lesson10/api-test.html
+++ b/lesson10/api-test.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Weather API</title>
+  <meta name="description"
+        content="This card pages is to teach APIs and how data is linked from JSON to js to html output.">
 </head>
 <body>
   
