--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                                     href="lesson9/index.html"><b>The Weather Site Home Page</b></a></li>
                         <li>Lesson 10: <a class="link"
                                  href="lesson10/api-test.html"><b>Weather API</b></a><span> | </span><a class="link"
-                                    href="#"><b>Link</b></a></li>
+                                    href="lesson10/preston-10.html"><b>Preston Weather API</b></a></li>
                         <li>Lesson 11: <a class="link"
                                  href="#"><b>Link</b></a><span> | </span><a class="link"
                                     href="#"><b>Link</b></a></li>
