weather summary working wk 10

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                                  href="lesson8/stormcenter.html"><b>Storm Center</b></a></li>
                         <li>Lesson 09: <a class="link"
                                  href="lesson9/prophets.html"><b>Prophets Cards</b></a><span> | </span><a class="link"
-                                    href="lesson9/index.html"><b>The Weather Site Home Page</b></a></li>
+                                    href="#"><b>The Weather Site Home Page</b></a></li>
                         <li>Lesson 10: <a class="link"
                                  href="lesson10/api-test.html"><b>Weather API</b></a><span> | </span><a class="link"
                                     href="lesson10/preston-10.html"><b>Preston Weather API</b></a></li>
