--- a/lesson7/gallery-7.html
+++ b/lesson7/gallery-7.html
@@ -43,11 +43,11 @@
       <li><a class="menu"
            href="#">&#9776; Menu</a></li>
       <li><a href="#">Home</a></li>
-      <li><a href="#">Preston</a></li>
+      <li><a href="../lesson10/preston-10.html">Preston</a></li>
       <li><a href="#">Soda Springs</a></li>
       <li><a href="#">Fish Haven</a></li>
-      <li><a href="#">Storm Center</a></li>
-      <li><a href="#">Gallery</a></li>
+      <li><a href="../lesson8/stormcenter.html">Storm Center</a></li>
+      <li class="active"><a href="#">Gallery</a></li>
     </ul>
   </nav>
 
