--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -46,17 +46,27 @@
       <li><a class="menu"
            href="#">&#9776; Menu</a></li>
       <li><a href="#">Home</a></li>
-      <li><a href="#">Preston</a></li>
+      <li><a href="../lesson10/preston-10.html">Preston</a></li>
       <li><a href="#">Soda Springs</a></li>
       <li><a href="#">Fish Haven</a></li>
       <li class="active"><a href="#">Storm Center</a></li>
-      <li><a href="#">Gallery</a></li>
+      <li><a href="../lesson7/gallery-7.html">Gallery</a></li>
     </ul>
   </nav>
 
   <main>
 
-
+     <div class="hero-container">
+       <picture class="hero-ph">
+         <source media="(max-width: 300px)"
+                 srcset="images/storm-center-300.jpg">
+         <source media="(max-width: 500px)"
+                 srcset="images/storm-center-500.jpg">
+         <source media="(min-width: 960px)"
+                 srcset="images/storm-center-960.jpg">
+         <img src="images/storm-center-960.jpg"
+              alt="hero images">
+       </picture>
 
     <div class="grid">
       <div>
