done for the night

--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -67,7 +67,8 @@
          <img src="images/storm-center-960.jpg"
               alt="hero images">
        </picture>
-
+      </div>
+      
     <div class="grid">
       <div>
         <fieldset>
