--- a/lesson10/preston-10.html
+++ b/lesson10/preston-10.html
@@ -111,8 +111,8 @@
         <img id="icon1" src="images/cloud-with-rain.png"
              alt="rain icon">
         <div><span id="high1"
-                class="wk-h">56</span>&deg;&nbsp;&nbsp;<span id="low1"
-                class="wk-l">32</span>&deg;</div>
+                class="wk-h"></span>&deg;&nbsp;&nbsp;<span id="low1"
+                class="wk-l"></span>&deg;</div>
       </div>
 
       <div class="forecast-day">
