--- a/lesson10/preston-10.html
+++ b/lesson10/preston-10.html
@@ -60,7 +60,7 @@
     <ul class="navigation">
       <li><a class="menu"
            href="#">&#9776; Menu</a></li>
-      <li><a href="#">Home</a></li>
+      <li><a href="../lesson9/index.html">Home</a></li>
       <li class="active"><a href="#">Preston</a></li>
       <li><a href="#">Soda Springs</a></li>
       <li><a href="#">Fish Haven</a></li>
