--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -45,7 +45,7 @@
     <ul class="navigation">
       <li><a class="menu"
            href="#">&#9776; Menu</a></li>
-      <li><a href="#">Home</a></li>
+      <li><a href="../lesson9/index.html">Home</a></li>
       <li><a href="../lesson10/preston-10.html">Preston</a></li>
       <li><a href="#">Soda Springs</a></li>
       <li><a href="#">Fish Haven</a></li>
