--- a/lesson9/index.html
+++ b/lesson9/index.html
@@ -7,11 +7,11 @@
         content="IE=edge">
   <meta name="viewport"
         content="width=device-width, initial-scale=1.0">
-  <title>Sunshine Forecast Weather | Weather Site | Barbara Chamberlin</title>
-  <meta name="author"
-        content="Barbara Chamberlin">
+  <title>Sunshine Forecast Home Page</title>
   <meta name="description"
-        content="This is the Sunshine Forecast Weather website homepage.">
+        content="This is the Sunshine Forecast Home page which uses JSON to output town site information.">
+  <link rel="shortcut icon"
+        href="images/favicon.ico">
   <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
   <link rel="stylesheet"
@@ -22,76 +22,131 @@
         href="css/large.css">
   <script defer
           src="js/script.js"></script>
+ 
+
   <link rel="preconnect"
         href="https://fonts.googleapis.com">
   <link rel="preconnect"
         href="https://fonts.gstatic.com"
         crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&family=Roboto&display=swap"
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Yaldevi&display=swap"
         rel="stylesheet">
 
 </head>
 
 <body>
-
+  
   <header>
-    <picture>
-      <img src="images/sun-weather-icon.png"
-           alt="Sunshine Forecast Logo Icon">
-    </picture>
-    <h1>Sunshine Forecast Weather</h1>
-    <p>Forecast is our middle name.</p>
-  </header>
 
+    <img src="images/sun-weather-icon.png"
+         alt="Sunshine Forecast Logo Icon">
+
+    <section>
+      <h1>Sunshine Forecast</h1>
+      <p>We take our day sunny side up.</p>
+    </section>
+  </header>
   <nav>
-    <ul>
-      <li>Home</li>
-      <li>Preston</li>
-      <li>Soda Springs</li>
-      <li>Fish Haven</li>
-      <li>Storm Center</li>
-      <li>Gallery</li>
+    <ul class="navigation">
+      <li><a class="menu"
+           href="#">&#9776; Menu</a></li>
+      <li class="active"><a href="#">Home</a></li>
+      <li ><a href="../lesson10/preston-10.html">Preston</a></li>
+      <li><a href="#">Soda Springs</a></li>
+      <li><a href="#">Fish Haven</a></li>
+      <li><a href="../lesson8/stormcenter.html">Storm Center</a></li>
+      <li><a href="../lesson7/gallery-7.html">Gallery</a></li>
     </ul>
   </nav>
 
   <main>
 
-
-    <div class="grid-container">
-      <div>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur ea voluptas neque sed maiores a unde.
-          Tempore, exercitationem necessitatibus temporibus modi, alias nam ab atque et ullam, iusto expedita.
-          Cupiditate!
-        </p>
-        <img src="#"
-             alt="#">
-      </div>
-      <div>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore mollitia ad modi, sapiente cupiditate a
-          tempore quod distinctio expedita? Blanditiis optio praesentium molestias aperiam quia, at vel expedita impedit
-          natus.
-        </p>
-        <img src="#"
-             alt="#">
-      </div>
-      <div>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore quaerat quibusdam aliquam ratione nihil
-          dolores
-          doloribus quo eaque, incidunt quam corporis, amet error autem fuga fugit! Veritatis eos libero minus.
-        </p>
-        <img src="#"
-             alt="#">
-      </div>
+    <div class="hero-container">
+      <picture class="hero-ph">
+        <source media="(max-width: 300px)"
+                srcset="images/home-page-300.jpg">
+        <source media="(max-width: 500px)"
+                srcset="images/home-page-500.jpg">
+        <source media="(min-width: 960px)"
+                srcset="images/home-page-960.jpg">
+        <img src="images/home-page-960.jpg"
+             alt="hero images">
+      </picture>  
     </div>
+
+    
+
+
+    <article>
+      <h3>Off The Beaten Trail</h3>
+      <picture class="art-pic">
+        <img src="images/the-trail-960.webp"
+             alt="mountain trail">
+      </picture>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras vel ullamcorper lacus. Phasellus justo augue,
+        luctus quis sagittis semper, aliquam et orci. Nulla a ligula elit. Nunc ut sapien justo. Phasellus urna tellus,
+        pretium finibus finibus in, bibendum ac est. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
+        tempus dui mauris, id sagittis lacus iaculis et. Maecenas turpis arcu, fringilla non libero a, porttitor mollis
+        magna. Curabitur aliquam malesuada tellus in maximus. In sodales felis ipsum, non pretium dui consequat
+        pharetra.
+      </p>
+      <br>
+      <p>
+        Morbi viverra at ex vitae placerat. Sed efficitur lectus vel semper venenatis. Phasellus in placerat justo, at
+        posuere lectus. Nunc ullamcorper dictum magna, a tincidunt tortor viverra eu. Donec nec lobortis lectus, non
+        ornare odio. Phasellus ultrices nisi ac elit lobortis aliquet. In dapibus ullamcorper augue non pharetra.
+      </p>
+      <br>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi posuere quam eu augue sollicitudin placerat vitae
+        id lacus. Pellentesque sed sapien risus. Suspendisse eros lectus, elementum ut vulputate at, pulvinar vitae
+        nulla. Aliquam ullamcorper nec diam et molestie. Duis auctor vel massa et vulputate. Quisque porta enim
+        venenatis aliquam ullamcorper. Praesent tempus, sem eleifend feugiat tempor, velit diam maximus massa, vel
+        egestas ante odio sed nulla.
+      </p>
+
+    </article>
 
   </main>
 
   <footer>
-    <map name="#"></map>
-    &copy; <span id="copyrightyear"></span> | Barbara Chamberlin | Oklahoma | <a class="byu-link"
-       href="https://www.byui.edu/online"> BYU-I Learning </a>
-    <p>Last Updated: <span id="lastupdated"></span></p>
+
+    <div class="vcard">
+      <div class="org">Sunshine Forecast</div>
+      <div class="adr">
+        <a href="https://goo.gl/maps/pkMykZqhob49MrN48">
+          <div class="street-address">450 E 800 S.</div>
+          <span class="locality">Preston</span>,
+          <span class="region">ID</span>,
+          <span class="postal-code">83263</span>
+        </a>
+      </div>
+      <div class="tel">(208) 867-5309</div>
+      <br>
+      <div class="email"><a href="mailto:sunshineforecast@gmail.com">sunshineforecast@gmail.com</a></div>
+
+    </div>
+    <div class="cry-media">
+      <p> &copy; <span id="copyrightyear"></span> &#160; Sunshine Forecast | <span id="currentyear"></span></p>
+
+      <a href="#"><img src="images/facebook.png"
+             alt="Sunshine Forecast's Facebook page link."></a>
+      <a href="#"><img src="images/instagram.png"
+             alt="Sunshine Forecast's Instagram account link."></a>
+      <a href="#"><img src="images/twitter.png"
+             alt="Sunshine Forecast's Twitter site link."></a>
+    </div>
+
   </footer>
+  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+  <script>
+    WebFont.load({
+      google: {
+        families: ['Montserrat', 'Yaldevi']
+      }
+    });
+  </script>
 </body>
 
 </html>
