--- a/lesson10/preston-10.html
+++ b/lesson10/preston-10.html
@@ -107,8 +107,10 @@
     <h3>5 Day Forecast</h3>
     <div class="forecast">
       <div class="forecast-day">
-        <div class="day" id="day1">Monday</div>
-        <img id="icon1" src="images/cloud-with-rain.png"
+        <div class="day"
+             id="day1"></div>
+        <img id="icon1"
+             src="images/cloud-with-rain.png"
              alt="rain icon">
         <div><span id="high1"
                 class="wk-h"></span>&deg;&nbsp;&nbsp;<span id="low1"
@@ -116,43 +118,47 @@
       </div>
 
       <div class="forecast-day">
-        <div class="day" id="day2">Tuesday</div>
+        <div class="day"
+             id="day2"></div>
         <img id="icon2"
              src="images/cloud-with-snow.png"
              alt="snow icon">
-         <div><span id="high2"
-                 class="wk-h">56</span>&deg;&nbsp;&nbsp;<span id="low2"
-                 class="wk-l">32</span>&deg;</div>
+        <div><span id="high2"
+                class="wk-h">56</span>&deg;&nbsp;&nbsp;<span id="low2"
+                class="wk-l">32</span>&deg;</div>
       </div>
 
       <div class="forecast-day">
-        <div class="day" id="day3">Wednesday</div>
+        <div class="day"
+             id="day3"></div>
         <img id="icon3"
              src="images/cloud-with-lightning-and-rain.png"
              alt="storm icon">
-         <div><span id="high3"
-                 class="wk-h">56</span>&deg;&nbsp;&nbsp;<span id="low3"
-                 class="wk-l">32</span>&deg;</div>
+        <div><span id="high3"
+                class="wk-h">56</span>&deg;&nbsp;&nbsp;<span id="low3"
+                class="wk-l">32</span>&deg;</div>
       </div>
 
       <div class="forecast-day">
-        <div class="day" id="day4">Thursday</div>
+        <div class="day"
+             id="day4"></div>
         <img id="icon4"
              src="images/sun-behind-small-cloud.png"
              alt="cloud icon">
-         <div><span id="high4"
-                 class="wk-h">56</span>&deg;&nbsp;&nbsp;<span id="low4"
-                 class="wk-l">32</span>&deg;</div>
+        <div><span id="high4"
+                class="wk-h">56</span>&deg;&nbsp;&nbsp;<span id="low4"
+                class="wk-l">32</span>&deg;</div>
       </div>
 
       <div class="forecast-day">
-        <div class="day" id="day5">Friday</div>
+        <div class="day"
+             id="day5"></div>
         <img id="icon5"
              src="images/sun.png"
              alt="sun icon">
-         <div><span id="high5"
-                 class="wk-h">56</span>&deg;&nbsp;&nbsp;<span id="low5"
-                 class="wk-l">32</span>&deg;</div>
+        <div><span id="high5"
+                class="wk-h">56</span>&deg;&nbsp;&nbsp;<span id="low5"
+                class="wk-l">32</span>&deg;</div>
       </div>
     </div>
 
