--- a/lesson9/index.html
+++ b/lesson9/index.html
@@ -75,39 +75,31 @@
     </div>
 
     
-
-
-    <article>
-      <h3>Off The Beaten Trail</h3>
-      <picture class="art-pic">
-        <img src="images/the-trail-960.webp"
-             alt="mountain trail">
-      </picture>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras vel ullamcorper lacus. Phasellus justo augue,
-        luctus quis sagittis semper, aliquam et orci. Nulla a ligula elit. Nunc ut sapien justo. Phasellus urna tellus,
-        pretium finibus finibus in, bibendum ac est. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
-        tempus dui mauris, id sagittis lacus iaculis et. Maecenas turpis arcu, fringilla non libero a, porttitor mollis
-        magna. Curabitur aliquam malesuada tellus in maximus. In sodales felis ipsum, non pretium dui consequat
-        pharetra.
-      </p>
-      <br>
-      <p>
-        Morbi viverra at ex vitae placerat. Sed efficitur lectus vel semper venenatis. Phasellus in placerat justo, at
-        posuere lectus. Nunc ullamcorper dictum magna, a tincidunt tortor viverra eu. Donec nec lobortis lectus, non
-        ornare odio. Phasellus ultrices nisi ac elit lobortis aliquet. In dapibus ullamcorper augue non pharetra.
-      </p>
-      <br>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi posuere quam eu augue sollicitudin placerat vitae
-        id lacus. Pellentesque sed sapien risus. Suspendisse eros lectus, elementum ut vulputate at, pulvinar vitae
-        nulla. Aliquam ullamcorper nec diam et molestie. Duis auctor vel massa et vulputate. Quisque porta enim
-        venenatis aliquam ullamcorper. Praesent tempus, sem eleifend feugiat tempor, velit diam maximus massa, vel
-        egestas ante odio sed nulla.
-      </p>
-
-    </article>
-
+    <div class="cards">
+      <img src="images/preston-home-400x300.jpg" alt="Preston home town">
+      <h2>Preston</h2>
+      <p></p>
+      <p></p>
+      <p></p>
+      <p></p>
+    </div>
+    <div class="cards">
+      <img src="images/fish-haven-home-400x300.jpg" alt="Fish Haven home town">
+      <h2>Fish Haven</h2>
+      <p></p>
+      <p></p>
+      <p></p>
+      <p></p>
+    </div>
+    <div class="cards">
+      <img src="images/soda-springs-home-400x300.jpg" alt="Soda Springs home town">
+      <h2>Soda Springs</h2>
+      <p></p>
+      <p></p>
+      <p></p>
+      <p></p>
+    </div>
+  
   </main>
 
   <footer>
