--- a/index.html
+++ b/index.html
@@ -73,8 +73,10 @@
                                  href="lesson10/api-test.html"><b>Weather API</b></a><span> | </span><a class="link"
                                     href="lesson10/preston-10.html"><b>Preston Weather API</b></a></li>
                         <li>Lesson 11: <a class="link"
-                                 href="#"><b>Link</b></a><span> | </span><a class="link"
-                                    href="#"><b>Link</b></a></li>
+                                 href="lesson11/index.html"><b>Sunshine Forecast Weather Website</b></a></li>
+                                 
+                                 <!-- <span> | </span><a class="link"
+                                    href="#"><b>Link</b></a> -->
 
                   </ul>
             </main>
