--- a/lesson11/soda-springs.html
+++ b/lesson11/soda-springs.html
@@ -7,27 +7,41 @@
         content="IE=edge">
   <meta name="viewport"
         content="width=device-width, initial-scale=1.0">
+
   <title>Soda Springs Weather Site</title>
   <meta name="description"
         content="This is the Soda Springs, Idaho weather page.">
+
   <link rel="shortcut icon"
         href="images/full-site-images/favicon.ico">
+
   <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+
   <link rel="stylesheet"
-        href="css/small.css">
+        href="css/full-site-css/small.css">
   <link rel="stylesheet"
-        href="css/medium.css">
+        href="css/full-site-css/medium.css">.
+   <link rel="stylesheet"
+         href="css/full-site-css/large.css">
+
   <link rel="stylesheet"
-        href="css/large.css">
+        href="css/soda-springs-css/small.css">
+  <link rel="stylesheet"
+        href="css/soda-springs-css/medium.css">
+  <link rel="stylesheet"
+        href="css/soda-springs-css/large.css">
+        
   <script defer
-          src="js/script.js"></script>
+          src="js/full-site-js/script.js"></script>
+
   <script defer
-          src="js/banner.js"></script>
+          src="js/soda-springs-js/banner.js"></script>
   <script defer
-          src="js/weather-summary.js"></script>
+          src="js/soda-springs-js/weather-summary.js"></script>
   <script defer
-          src="js/five-day-forecast.js"></script>
+          src="js/soda-springs-js/five-day-forecast.js"></script>
+
   <link rel="preconnect"
         href="https://fonts.googleapis.com">
   <link rel="preconnect"
