--- a/lesson11/fish-haven.html
+++ b/lesson11/fish-haven.html
@@ -7,27 +7,43 @@
         content="IE=edge">
   <meta name="viewport"
         content="width=device-width, initial-scale=1.0">
+
   <title>Fish Haven Weather Site</title>
   <meta name="description"
         content="This is the Fish Haven, Idaho weather page.">
+
   <link rel="shortcut icon"
         href="images/full-site-images/favicon.ico">
+
   <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+
   <link rel="stylesheet"
-        href="css/small.css">
+        href="css/full-site-css/small.css">
   <link rel="stylesheet"
-        href="css/medium.css">
+        href="css/full-site-css/medium.css">
   <link rel="stylesheet"
-        href="css/large.css">
+        href="css/full-site-css/large.css">
+
+
+  <link rel="stylesheet"
+        href="css/fish-haven-css/small.css">
+  <link rel="stylesheet"
+        href="css/fish-haven-css/medium.css">
+  <link rel="stylesheet"
+        href="css/fish-haven-css/large.css">
+
   <script defer
-          src="js/script.js"></script>
+          src="js/full-site-js/script.js"></script>
+
+
   <script defer
-          src="js/banner.js"></script>
+          src="js/fish-haven-js/banner.js"></script>
   <script defer
-          src="js/weather-summary.js"></script>
+          src="js/fish-haven-js/weather-summary.js"></script>
   <script defer
-          src="js/five-day-forecast.js"></script>
+          src="js/fish-haven-js/five-day-forecast.js"></script>
+
   <link rel="preconnect"
         href="https://fonts.googleapis.com">
   <link rel="preconnect"
