--- a/lesson11/gallery.html
+++ b/lesson11/gallery.html
@@ -7,21 +7,38 @@
         content="IE=edge">
   <meta name="viewport"
         content="width=device-width, initial-scale=1.0">
+
   <title>The Weather Gallery</title>
   <meta name="description"
         content="These are images by the public of different weather around the area.">
+
   <link rel="shortcut icon"
-        href="images/favicon.ico">
+        href="images/full-site-images/favicon.ico">
+
   <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+
   <link rel="stylesheet"
-        href="css/small.css">
+        href="css/full-site-css/small.css">
   <link rel="stylesheet"
-        href="css/medium.css">
+        href="css/full-site-css/medium.css">
   <link rel="stylesheet"
-        href="css/large.css">
+        href="css/full-site-css/large.css">
+
+
+  <link rel="stylesheet"
+        href="css/gallery-css/small.css">
+  <link rel="stylesheet"
+        href="css/gallery-css/medium.css">
+  <link rel="stylesheet"
+        href="css/gallery-css/medium.css">
+
+
   <script defer
-          src="js/script.js"></script>
+          src="js/full-site-js/script.js"></script>
+
+  <script defer
+          src="js/gallery-js/script.js"></script>
 
 
 </head>
@@ -30,7 +47,7 @@
 
   <header>
 
-    <img src="images/sun-weather-icon.png"
+    <img src="images/full-site-images/sun-weather-icon.png"
          alt="Sunshine Forecast Logo Icon">
 
     <section>
@@ -42,11 +59,11 @@
     <ul class="navigation">
       <li><a class="menu"
            href="#">&#9776; Menu</a></li>
-      <li><a href="../lesson9/index.html">Home</a></li>
-      <li><a href="../lesson10/preston-10.html">Preston</a></li>
-      <li><a href="#">Soda Springs</a></li>
-      <li><a href="#">Fish Haven</a></li>
-      <li><a href="../lesson8/stormcenter.html">Storm Center</a></li>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="preston.html">Preston</a></li>
+      <li><a href="soda-springs.html">Soda Springs</a></li>
+      <li><a href="fish-haven.html">Fish Haven</a></li>
+      <li><a href="stormcenter.html">Storm Center</a></li>
       <li class="active"><a href="#">Gallery</a></li>
     </ul>
   </nav>
@@ -54,48 +71,48 @@
   <main>
     <h2>Weather Gallery</h2>
     <div class="grid pictures">
-      <figure><img src="images/placeholder.jpg"
-             data-src="images/w-pic9.jpg"
+      <figure><img src="images/gallery-images/placeholder.jpg"
+             data-src="images/gallery-images/w-pic9.jpg"
              alt="A purple path of flowers.">
         <figcaption>"Purple Garden Path" by Bob Gate</figcaption>
       </figure>
-      <figure><img src="images/placeholder.jpg"
-             data-src="images/w-pic8.jpg"
+      <figure><img src="images/gallery-images/placeholder.jpg"
+             data-src="images/gallery-images/w-pic8.jpg"
              alt="Old cabin in the mountains during springtime.">
         <figcaption>"Back In Time" by Sean Wells</figcaption>
       </figure>
-      <figure><img src="images/placeholder.jpg"
-             data-src="images/w-pic3.jpg"
+      <figure><img src="images/gallery-images/placeholder.jpg"
+             data-src="images/gallery-images/w-pic3.jpg"
              alt="Green grass and blue sky.">
         <figcaption>"Spring Time Dreaming" by Leslie Hope</figcaption>
       </figure>
-      <figure><img src="images/placeholder.jpg"
-             data-src="images/w-pic4.jpg"
+      <figure><img src="images/gallery-images/placeholder.jpg"
+             data-src="images/gallery-images/w-pic4.jpg"
              alt="Lighting strike.">
         <figcaption>"Electric Spray" by Mary Brown </figcaption>
       </figure>
-      <figure><img src="images/placeholder.jpg"
-             data-src="images/w-pic6.jpg"
+      <figure><img src="images/gallery-images/placeholder.jpg"
+             data-src="images/gallery-images/w-pic6.jpg"
              alt="A person standing at the end of the dock on a wet day.">
         <figcaption>"A Chance of Rain" by Scott Erickson</figcaption>
       </figure>
-      <figure><img src="images/placeholder.jpg"
-             data-src="images/w-pic2.jpg"
+      <figure><img src="images/gallery-images/placeholder.jpg"
+             data-src="images/gallery-images/w-pic2.jpg"
              alt="A woodland road in the fall.">
         <figcaption>"Off The Beaten Path" by Patty Hughes</figcaption>
       </figure>
-      <figure><img src="images/placeholder.jpg"
-             data-src="images/w-pic5.jpg"
+      <figure><img src="images/gallery-images/placeholder.jpg"
+             data-src="images/gallery-images/w-pic5.jpg"
              alt="Trees in the fall.">
         <figcaption>"Falling For Fall" by Tammy Camp</figcaption>
       </figure>
-      <figure><img src="images/placeholder.jpg"
-             data-src="images/w-pic1.jpg"
+      <figure><img src="images/gallery-images/placeholder.jpg"
+             data-src="images/gallery-images/w-pic1.jpg"
              alt="A snowy road lined with trees.">
         <figcaption>"Ice Road" by Neville Longbottom</figcaption>
       </figure>
-      <figure><img src="images/placeholder.jpg"
-             data-src="images/w-pic7.jpg"
+      <figure><img src="images/gallery-images/placeholder.jpg"
+             data-src="images/gallery-images/w-pic7.jpg"
              alt="A cabin on the lake.">
         <figcaption>"Winter Get A Way" by Alice Choate</figcaption>
       </figure>
@@ -125,23 +142,23 @@
     <div class="cry-media">
       <p> &copy; <span id="copyrightyear"></span> &#160; Sunshine Forecast | <span id="currentyear"></span></p>
 
-      <a href="#"><img src="images/facebook.png"
+      <a href="#"><img src="images/full-site-images/facebook.png"
              alt="Sunshine Forecast's Facebook page link."></a>
-      <a href="#"><img src="images/instagram.png"
+      <a href="#"><img src="images/full-site-images/instagram.png"
              alt="Sunshine Forecast's Instagram account link."></a>
-      <a href="#"><img src="images/twitter.png"
+      <a href="#"><img src="images/full-site-images/twitter.png"
              alt="Sunshine Forecast's Twitter site link."></a>
     </div>
 
   </footer>
-  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+  <!-- <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
   <script>
     WebFont.load({
       google: {
         families: ['Montserrat', 'Yaldevi']
       }
     });
-  </script>
+  </script> -->
 </body>
 
 </html>
