--- a/lesson11/index.html
+++ b/lesson11/index.html
@@ -7,22 +7,26 @@
         content="IE=edge">
   <meta name="viewport"
         content="width=device-width, initial-scale=1.0">
+
   <title>Sunshine Forecast Home Page</title>
   <meta name="description"
         content="This is the Sunshine Forecast Home page which uses JSON to output town site information.">
+
   <link rel="shortcut icon"
-        href="images/favicon.ico">
+        href="images/full-site-images/favicon.ico">
+
   <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+
   <link rel="stylesheet"
-        href="css/small.css">
+        href="css/full-site-css/small.css">
   <link rel="stylesheet"
-        href="css/medium.css">
+        href="css/full-site-css/medium.css">
   <link rel="stylesheet"
-        href="css/large.css">
+        href="css/full-site-css/large.css">
+
   <script defer
-          src="js/script.js"></script>
- 
+          src="js/full-site-js/script.js"></script>
 
   <link rel="preconnect"
         href="https://fonts.googleapis.com">
@@ -35,10 +39,10 @@
 </head>
 
 <body>
-  
+
   <header>
 
-    <img src="images/sun-weather-icon.png"
+    <img src="images/full-site-images/sun-weather-icon.png"
          alt="Sunshine Forecast Logo Icon">
 
     <section>
@@ -51,11 +55,11 @@
       <li><a class="menu"
            href="#">&#9776; Menu</a></li>
       <li class="active"><a href="#">Home</a></li>
-      <li ><a href="../lesson10/preston-10.html">Preston</a></li>
-      <li><a href="#">Soda Springs</a></li>
-      <li><a href="#">Fish Haven</a></li>
-      <li><a href="../lesson8/stormcenter.html">Storm Center</a></li>
-      <li><a href="../lesson7/gallery-7.html">Gallery</a></li>
+      <li><a href="preston.html">Preston</a></li>
+      <li><a href="soda-springs.html">Soda Springs</a></li>
+      <li><a href="fish-haven.html">Fish Haven</a></li>
+      <li><a href="stormcenter.html">Storm Center</a></li>
+      <li><a href="gallery.html">Gallery</a></li>
     </ul>
   </nav>
 
@@ -64,19 +68,20 @@
     <div class="hero-container">
       <picture class="hero-ph">
         <source media="(max-width: 300px)"
-                srcset="images/home-page-300.jpg">
+                srcset="images/home-images/home-page-300.jpg">
         <source media="(max-width: 500px)"
-                srcset="images/home-page-500.jpg">
+                srcset="images/home-images/home-page-500.jpg">
         <source media="(min-width: 960px)"
-                srcset="images/home-page-960.jpg">
-        <img src="images/home-page-960.jpg"
+                srcset="images/home-images/home-page-960.jpg">
+        <img src="images/home-images/home-page-960.jpg"
              alt="hero images">
-      </picture>  
+      </picture>
     </div>
 
-    
+
     <div class="cards">
-      <img src="images/preston-home-400x300.jpg" alt="Preston home town">
+      <img src="images/home-images/preston-home-400x300.jpg"
+           alt="Preston home town">
       <h2>Preston</h2>
       <p></p>
       <p></p>
@@ -84,7 +89,8 @@
       <p></p>
     </div>
     <div class="cards">
-      <img src="images/fish-haven-home-400x300.jpg" alt="Fish Haven home town">
+      <img src="images/home-images/fish-haven-home-400x300.jpg"
+           alt="Fish Haven home town">
       <h2>Fish Haven</h2>
       <p></p>
       <p></p>
@@ -92,14 +98,15 @@
       <p></p>
     </div>
     <div class="cards">
-      <img src="images/soda-springs-home-400x300.jpg" alt="Soda Springs home town">
+      <img src="images/home-images/soda-springs-home-400x300.jpg"
+           alt="Soda Springs home town">
       <h2>Soda Springs</h2>
       <p></p>
       <p></p>
       <p></p>
       <p></p>
     </div>
-  
+
   </main>
 
   <footer>
@@ -122,23 +129,23 @@
     <div class="cry-media">
       <p> &copy; <span id="copyrightyear"></span> &#160; Sunshine Forecast | <span id="currentyear"></span></p>
 
-      <a href="#"><img src="images/facebook.png"
+      <a href="#"><img src="images/full-site-images/facebook.png"
              alt="Sunshine Forecast's Facebook page link."></a>
-      <a href="#"><img src="images/instagram.png"
+      <a href="#"><img src="images/full-site-images/instagram.png"
              alt="Sunshine Forecast's Instagram account link."></a>
-      <a href="#"><img src="images/twitter.png"
+      <a href="#"><img src="images/full-site-images/twitter.png"
              alt="Sunshine Forecast's Twitter site link."></a>
     </div>
 
   </footer>
-  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+  <!-- <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
   <script>
     WebFont.load({
       google: {
         families: ['Montserrat', 'Yaldevi']
       }
     });
-  </script>
+  </script> -->
 </body>
 
 </html>
