--- a/lesson11/preston.html
+++ b/lesson11/preston.html
@@ -7,27 +7,41 @@
         content="IE=edge">
   <meta name="viewport"
         content="width=device-width, initial-scale=1.0">
+
   <title>Preston Home Page</title>
   <meta name="description"
         content="This is the Preston Idaho page and this week we are using API to auto fill weather data.">
+
   <link rel="shortcut icon"
-        href="images/favicon.ico">
+        href="images/full-site-images/favicon.ico">
+
   <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+
   <link rel="stylesheet"
-        href="css/small.css">
+        href="css/full-site-css/small.css">
   <link rel="stylesheet"
-        href="css/medium.css">
+        href="css/full-site-css/medium.css">
   <link rel="stylesheet"
-        href="css/large.css">
+        href="css/full-site-css/large.css">
+
+  <link rel="stylesheet"
+        href="css/preston-css/small.css">
+  <link rel="stylesheet"
+        href="css/preston-css/medium.css">
+  <link rel="stylesheet"
+        href="css/preston-css/large.css">
+
   <script defer
-          src="js/script.js"></script>
+          src="js/full-site-js/script.js"></script>
+
   <script defer
-          src="js/banner.js"></script>
+          src="js/preston-js/banner.js"></script>
   <script defer
-          src="js/weather-summary.js"></script>
+          src="js/preston-js/weather-summary.js"></script>
   <script defer
-          src="js/five-day-forecast.js"></script>
+          src="js/preston-js/five-day-forecast.js"></script>
+
   <link rel="preconnect"
         href="https://fonts.googleapis.com">
   <link rel="preconnect"
@@ -48,7 +62,7 @@
   </div>
   <header>
 
-    <img src="images/sun-weather-icon.png"
+    <img src="images/full-site-images/sun-weather-icon.png"
          alt="Sunshine Forecast Logo Icon">
 
     <section>
@@ -60,12 +74,12 @@
     <ul class="navigation">
       <li><a class="menu"
            href="#">&#9776; Menu</a></li>
-      <li><a href="../lesson9/index.html">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li class="active"><a href="#">Preston</a></li>
-      <li><a href="#">Soda Springs</a></li>
-      <li><a href="#">Fish Haven</a></li>
-      <li><a href="../lesson8/stormcenter.html">Storm Center</a></li>
-      <li><a href="../lesson7/gallery-7.html">Gallery</a></li>
+      <li><a href="soda-springs.html">Soda Springs</a></li>
+      <li><a href="fish-haven.html">Fish Haven</a></li>
+      <li><a href="stormcenter.html">Storm Center</a></li>
+      <li><a href="gallery.html">Gallery</a></li>
     </ul>
   </nav>
 
@@ -76,12 +90,12 @@
     <div class="hero-container">
       <picture class="hero-ph">
         <source media="(max-width: 300px)"
-                srcset="images/preston-300.jpg">
+                srcset="images/preston-images/preston-300.jpg">
         <source media="(max-width: 500px)"
-                srcset="images/preston-500.jpg">
+                srcset="images/preston-images/preston-500.jpg">
         <source media="(min-width: 960px)"
-                srcset="images/preston-960.jpg">
-        <img src="images/preston-960.jpg"
+                srcset="images/preston-images/preston-960.jpg">
+        <img src="images/preston-images/preston-960.jpg"
              alt="hero images">
       </picture>
 
@@ -110,7 +124,7 @@
         <div class="day"
              id="day1"></div>
         <img id="icon1"
-             src="images/cloud-with-rain.png"
+             src="images/full-site-images/cloud-with-rain.png"
              alt="rain icon">
         <div><span id="high1"
                 class="wk-h"></span>&deg;&nbsp;&nbsp;<span id="low1"
@@ -121,7 +135,7 @@
         <div class="day"
              id="day2"></div>
         <img id="icon2"
-             src="images/cloud-with-snow.png"
+             src="images/full-site-images/cloud-with-snow.png"
              alt="snow icon">
         <div><span id="high2"
                 class="wk-h">56</span>&deg;&nbsp;&nbsp;<span id="low2"
@@ -132,7 +146,7 @@
         <div class="day"
              id="day3"></div>
         <img id="icon3"
-             src="images/cloud-with-lightning-and-rain.png"
+             src="images/full-site-images/cloud-with-lightning-and-rain.png"
              alt="storm icon">
         <div><span id="high3"
                 class="wk-h">56</span>&deg;&nbsp;&nbsp;<span id="low3"
@@ -143,7 +157,7 @@
         <div class="day"
              id="day4"></div>
         <img id="icon4"
-             src="images/sun-behind-small-cloud.png"
+             src="images/full-site-images/sun-behind-small-cloud.png"
              alt="cloud icon">
         <div><span id="high4"
                 class="wk-h">56</span>&deg;&nbsp;&nbsp;<span id="low4"
@@ -154,7 +168,7 @@
         <div class="day"
              id="day5"></div>
         <img id="icon5"
-             src="images/sun.png"
+             src="images/full-site-images/sun.png"
              alt="sun icon">
         <div><span id="high5"
                 class="wk-h">56</span>&deg;&nbsp;&nbsp;<span id="low5"
@@ -166,7 +180,7 @@
     <article>
       <h3>Off The Beaten Trail</h3>
       <picture class="art-pic">
-        <img src="images/the-trail-960.webp"
+        <img src="images/preston-images/the-trail-960.webp"
              alt="mountain trail">
       </picture>
       <p>
@@ -216,23 +230,23 @@
     <div class="cry-media">
       <p> &copy; <span id="copyrightyear"></span> &#160; Sunshine Forecast | <span id="currentyear"></span></p>
 
-      <a href="#"><img src="images/facebook.png"
+      <a href="#"><img src="images/full-site-images/facebook.png"
              alt="Sunshine Forecast's Facebook page link."></a>
-      <a href="#"><img src="images/instagram.png"
+      <a href="#"><img src="images/full-site-images/instagram.png"
              alt="Sunshine Forecast's Instagram account link."></a>
-      <a href="#"><img src="images/twitter.png"
+      <a href="#"><img src="images/full-site-images/twitter.png"
              alt="Sunshine Forecast's Twitter site link."></a>
     </div>
 
   </footer>
-  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+  <!-- <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
   <script>
     WebFont.load({
       google: {
         families: ['Montserrat', 'Yaldevi']
       }
     });
-  </script>
+  </script> -->
 </body>
 
 </html>
