--- a/lesson11/stormcenter.html
+++ b/lesson11/stormcenter.html
@@ -6,24 +6,39 @@
   <meta http-equiv="X-UA-Compatible"
         content="IE=edge">
   <meta name="viewport"
-        content="width=device-width, initial-scale=1.0">
+        content="width=device-width, initial-scale=1.0">.
+
   <title>Storm Center</title>
   <meta name="description"
         content="This is the storm center webpage that allows users to report storm or unusual weather events.">
+
   <link rel="shortcut icon"
-        href="images/favicon.ico">
+        href="images/full-site-images/favicon.ico">
+
   <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+
   <link rel="stylesheet"
-        href="css/small.css">
+        href="css/full-site-css/small.css">
   <link rel="stylesheet"
-        href="css/medium.css">
+        href="css/full-site-css/medium.css">
   <link rel="stylesheet"
-        href="css/large.css">
+        href="css/full-site-css/large.css">
+
+  <link rel="stylesheet"
+        href="css/storm-center-css/small.css">
+  <link rel="stylesheet"
+        href="css/storm-center-css/medium.css">
+  <link rel="stylesheet"
+        href="css/storm-center-css/large.css">
+
   <script defer
-          src="js/script.js"></script>
+          src="js//full-site-js/script.js"></script>
+
   <script defer
-          src="js/storm-reporting.js"></script>
+          src="js/storm-center-js/storm-center.js"></script>
+  <script defer
+          src="js/storm-center-js/storm-reporting.js"></script>
 
 
 
@@ -33,7 +48,7 @@
 
   <header>
 
-    <img src="images/sun-weather-icon.png"
+    <img src="images/full-site-images/sun-weather-icon.png"
          alt="Sunshine Forecast Logo Icon">
 
     <section>
@@ -45,12 +60,12 @@
     <ul class="navigation">
       <li><a class="menu"
            href="#">&#9776; Menu</a></li>
-      <li><a href="../lesson9/index.html">Home</a></li>
-      <li><a href="../lesson10/preston-10.html">Preston</a></li>
-      <li><a href="#">Soda Springs</a></li>
-      <li><a href="#">Fish Haven</a></li>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="preston.html">Preston</a></li>
+      <li><a href="soda-springs.html">Soda Springs</a></li>
+      <li><a href="fish-haven.html">Fish Haven</a></li>
       <li class="active"><a href="#">Storm Center</a></li>
-      <li><a href="../lesson7/gallery-7.html">Gallery</a></li>
+      <li><a href="gallery.html">Gallery</a></li>
     </ul>
   </nav>
 
@@ -59,12 +74,12 @@
      <div class="hero-container">
        <picture class="hero-ph">
          <source media="(max-width: 300px)"
-                 srcset="images/storm-center-300.jpg">
+                 srcset="images/storm-center-images/storm-center-300.jpg">
          <source media="(max-width: 500px)"
-                 srcset="images/storm-center-500.jpg">
+                 srcset="images/storm-center-images/storm-center-500.jpg">
          <source media="(min-width: 960px)"
-                 srcset="images/storm-center-960.jpg">
-         <img src="images/storm-center-960.jpg"
+                 srcset="images/storm-center-images/storm-center-960.jpg">
+         <img src="images/storm-center-images/storm-center-960.jpg"
               alt="hero images">
        </picture>
       </div>
@@ -271,23 +286,16 @@
     <div class="cry-media">
       <p> &copy; <span id="copyrightyear"></span> &#160; Sunshine Forecast | <span id="currentyear"></span></p>
 
-      <a href="#"><img src="images/facebook.png"
+      <a href="#"><img src="images/full-site-images/facebook.png"
              alt="Sunshine Forecast's Facebook page link."></a>
-      <a href="#"><img src="images/instagram.png"
+      <a href="#"><img src="images/full-site-images/instagram.png"
              alt="Sunshine Forecast's Instagram account link."></a>
-      <a href="#"><img src="images/twitter.png"
+      <a href="#"><img src="images/full-site-images/twitter.png"
              alt="Sunshine Forecast's Twitter site link."></a>
     </div>
 
   </footer>
-  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
-  <script>
-    WebFont.load({
-      google: {
-        families: ['Montserrat', 'Yaldevi']
-      }
-    });
-  </script>
+
 </body>
 
 </html>
