--- a/lesson11/thanks.html
+++ b/lesson11/thanks.html
@@ -7,24 +7,30 @@
         content="IE=edge">
   <meta name="viewport"
         content="width=device-width, initial-scale=1.0">
+
   <title>Storm Center Report - Thank You Page</title>
   <meta name="description"
         content="This is the storm center report thank you page which is received upon submission.">
+
   <link rel="shortcut icon"
-        href="images/favicon.ico">
+        href="images/full-site-images/favicon.ico">
+
   <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+
   <link rel="stylesheet"
-        href="css/small.css">
+        href="css/full-site-css/small.css">
   <link rel="stylesheet"
-        href="css/medium.css">
+        href="css/full-site-css/medium.css">
   <link rel="stylesheet"
-        href="css/large.css">
-  <script defer
-          src="js/script.js"></script>
+        href="css/full-site-css/large.css">
+
+  <link rel="stylesheet"
+        href="css/thanks-page.css">
  
 
-
+  <script defer
+          src="js/full-site-js/"></script>
 
 </head>
 
@@ -32,7 +38,7 @@
 
   <header>
 
-    <img src="images/sun-weather-icon.png"
+    <img src="images/full-site-images/sun-weather-icon.png"
          alt="Sunshine Forecast Logo Icon">
 
     <section>
@@ -44,19 +50,21 @@
     <ul class="navigation">
       <li><a class="menu"
            href="#">&#9776; Menu</a></li>
-      <li><a href="../lesson9/index.html">Home</a></li>
-      <li><a href="../lesson10/preston-10.html">Preston</a></li>
-      <li><a href="#">Soda Springs</a></li>
-      <li><a href="#">Fish Haven</a></li>
-      <li><a href="../lesson8/stormcenter.html">Storm Center</a></li>
-      <li><a href="../lesson7/gallery-7.html">Gallery</a></li>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="preston.html">Preston</a></li>
+      <li><a href="soda-springs.html">Soda Springs</a></li>
+      <li><a href="fish-haven.html">Fish Haven</a></li>
+      <li><a href="stormcenter.html">Storm Center</a></li>
+      <li><a href="gallery.html">Gallery</a></li>
     </ul>
   </nav>
 
   <main>
 
 
-    <h2 class="thanks">Thank you for helping our community stay weather aware. 🌩️ </h2>
+    <h2 class="thanks">Thank you for helping our community stay weather aware. 
+      <br>
+      🌪️ &nbsp; &nbsp;🌀 &nbsp; &nbsp;🌩️ &nbsp; &nbsp;❄️ &nbsp; &nbsp; ☔</h2>
     
       <figure>
         <iframe width="560"
@@ -93,23 +101,15 @@
     <div class="cry-media">
       <p> &copy; <span id="copyrightyear"></span> &#160; Sunshine Forecast | <span id="currentyear"></span></p>
 
-      <a href="#"><img src="images/facebook.png"
+      <a href="#"><img src="images/full-site-images/facebook.png"
              alt="Sunshine Forecast's Facebook page link."></a>
-      <a href="#"><img src="images/instagram.png"
+      <a href="#"><img src="images/full-site-images/instagram.png"
              alt="Sunshine Forecast's Instagram account link."></a>
-      <a href="#"><img src="images/twitter.png"
+      <a href="#"><img src="images/full-site-images/twitter.png"
              alt="Sunshine Forecast's Twitter site link."></a>
     </div>
 
   </footer>
-  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
-  <script>
-    WebFont.load({
-      google: {
-        families: ['Montserrat', 'Yaldevi']
-      }
-    });
-  </script>
 </body>
 
 </html>
